--- a/index.html
+++ b/index.html
@@ -64,31 +64,12 @@
                 <div class="col-lg-7">
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
-                        <!-- ABOUT START -->
-                        <div id="aboutme" class="py-3">
-                            <div class="container py-5">
-                                <div class="row">
-                                    <div class="col-5 d-none d-lg-block align-self-center">
-                                        <img class="border border-secondary rounded-circle" src="images/Display Picture.jpg" alt="profilepicture" width="375" height="375">
-                                    </div>
-                                    <div class="col-lg-7">
-                                        <h2 class="display-4 mb-5 text-center">About Me</h2>
-                                        <p class="lead text-center">
-                                            I am a dedicated enthusiast in the field of software engineering with a knack for building front-end and back-end applications. I have a strong foundation in Object-Oriented Programming and extensive experience working with Python (PyTorch, NumPy), Linux
-                                            (including scripting with tools like GREP, SED, and AWK), C++, and Amazon Web Services (AWS). I am proficient with data formats such as JSON and XML, which are crucial for data validation and transfer processes.
-                                            I thrive in fast-paced environments, adapting quickly to changing priorities while maintaining strong organizational and time management skills. My experience spans multiple operating systems, including Linux,
-                                            MacOS, and Windows, enabling adaptability in diverse software environments. Additionally, my proficiency with platforms like GitHub and GitLab highlights my ability to collaborate effectively and manage code
-                                            efficiently in team-based settings. Moreover, my expertise in SQL and various relational database systems, including PostgreSQL and AirTable, equips me with the skills to manage and analyze data efficiently.
-                                            I am passionate about fighting financial crime and am eager to leverage my technical and customer support skills in cross-functional collaborations to deliver effective solutions.
-                                        </p>
-                                        <p class="lead text-center">
-                                            <a class="btn btn-outline-dark btn-lg" href="#" target="_blank" aria-label="Resume/CV">Resume</a>
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- ABOUT END -->
+                        I am a dedicated enthusiast in the field of software engineering with a knack for building front-end and back-end applications. I have a strong foundation in Object-Oriented Programming and extensive experience working with Python (PyTorch, NumPy), Linux
+                        (including scripting with tools like GREP, SED, and AWK), C++, and Amazon Web Services (AWS). I am proficient with data formats such as JSON and XML, which are crucial for data validation and transfer processes. I thrive in fast-paced
+                        environments, adapting quickly to changing priorities while maintaining strong organizational and time management skills. My experience spans multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability
+                        in diverse software environments. Additionally, my proficiency with platforms like GitHub and GitLab highlights my ability to collaborate effectively and manage code efficiently in team-based settings. Moreover, my expertise in
+                        SQL and various relational database systems, including PostgreSQL and AirTable, equips me with the skills to manage and analyze data efficiently. I am passionate about fighting financial crime and am eager to leverage my technical
+                        and customer support skills in cross-functional collaborations to deliver effective solutions.
                     </p>
                     <p class="lead text-center">
                         <a class="btn btn-outline-dark btn-lg" href="#" target="_blank" aria-label="Resume/CV">Resume</a>
