--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="d-flex justify-content-between">
-                        <h6>Aspen HYSYS</h6>
+                        <h6>Object-Oriented Programming</h6>
                         <h6>95%</h6>
                     </div>
                     <div class="progress">
@@ -341,7 +341,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="d-flex justify-content-between">
-                        <h6>CHEMCAD</h6>
+                        <h6>Amazon Web Services (AWS)</h6>
                         <h6>95%</h6>
                     </div>
                     <div class="progress">
@@ -368,7 +368,7 @@
                 </div>
                 <div class="col-md-6 mb-5">
                     <div class="d-flex justify-content-between">
-                        <h6>Project Management</h6>
+                        <h6>SQL</h6>
                         <h6>100%</h6>
                     </div>
                     <div class="progress">
@@ -381,7 +381,7 @@
                         <h6>60%</h6>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-label="Example with label" style="max-width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60"></div>
+                        <div class="progress-bar" role="progressbar" aria-label="Example with label" style="max-width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80"></div>
                     </div>
                 </div>
                 <div class="col-md-6 mb-5">
