--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col-md-6">
                     <h2 class="display-4 mb-5 text-center">Education</h2>
                     <p class="lead text-center">
-                        Diploma in Software Engineering - Brainstation, January 2024 - August 2024
+                        Diploma in Software Engineering - BrainStation, January 2024 - August 2024
                     </p>
                     <hr>
                     <p class="lead text-center">
