--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="col-md-6">
                     <h2 class="display-4 mb-5 text-center">Education</h2>
                     <p class="lead text-center">
-                        Software Engineering Diploma - BrainStation, January 2024 - August 2024
+                        Software Engineering Diploma - BrainStation - January 2024 - August 2024
                     </p>
                     <hr>
                     <p class="lead text-center">
@@ -94,7 +94,7 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Machine Learning - Stanford University, December 2020 - March 2021
+                        Machine Learning - Stanford University - December 2020 - March 2021
                     </p>
                 </div>
             </div>
