--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="banner-detail">
             <div class="container">
                 <h1 class="display-1">Abdul Rafeh Rahat</h1>
-                <p>An aspiring enthusiast in the field of cybersecurity</p>
+                <p>AN ENGINEER DRIVEN TO RESULTS</p>
                 <div class="p-5 social-icons">
                     <a target="_blank" href="https://www.linkedin.com/in/arafehr/" aria-label="My linkedin"><i class="fab fa-linkedin fa-3x socialicons"></i></a>
                     <a target="_blank" href="mailto:arrahat@mun.ca" aria-label="My email"><i class="fa-regular fa-envelope fa-3x socialicons"></i></a>
@@ -64,12 +64,9 @@
                 <div class="col-lg-7">
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
-                        I am a dedicated enthusiast in the field of software engineering with a knack for building front-end and back-end applications. I have a strong foundation in Object-Oriented Programming and extensive experience working with Python (PyTorch, NumPy), Linux
-                        (including scripting with tools like GREP, SED, and AWK), C++, and Amazon Web Services (AWS). I am proficient with data formats such as JSON and XML, which are crucial for data validation and transfer processes. I thrive in fast-paced
-                        environments, adapting quickly to changing priorities while maintaining strong organizational and time management skills. My experience spans multiple operating systems, including Linux, MacOS, and Windows, enabling adaptability
-                        in diverse software environments. Additionally, my proficiency with platforms like GitHub and GitLab highlights my ability to collaborate effectively and manage code efficiently in team-based settings. Moreover, my expertise in
-                        SQL and various relational database systems, including PostgreSQL and AirTable, equips me with the skills to manage and analyze data efficiently. I am passionate and eager to leverage my technical and customer support skills in
-                        cross-functional collaborations to deliver effective solutions.
+                        Abdul Rafeh has diverse hands-on experience in nickel/cobalt hydrometallurgy, iron ore pyrometallurgy, and oil refining, including one with a multinational mining company in Newfoundland and Labrador. He was integral in managing process safety dashboards
+                        and performing process engineering calculations relating to heat transfer, system hydraulics, mass and energy balance, and interpreting and redlining piping and instrumentation diagrams (P&IDs) and process flow diagrams (PFDs).
+                        He thrives on tackling challenges within and beyond the engineering field and is driven to collaborate across diverse platforms to develop sustainable, lifelong, cost-effective, and successful projects.
                     </p>
                     <p class="lead text-center">
                     </p>
@@ -90,7 +87,7 @@
                     </p>
                     <hr>
                     <p class="lead text-center">
-                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - May 2023 - St. John's, NL
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - September 2023 - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
