--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- HEADER START -->
     <header class="web-header" style="background-color: rgb(0, 85, 255);">
         <nav class="px-3 fixed-top navbar-nav-scroll navbar-transparent navbar navbar-expand-lg navbar-light">
-            <a href="index.html" class="navbar-brand">Abdul Rafeh</a>
+            <a href="index.html" class="navbar-brand">Abdul Rafeh Rahat</a>
             <button aria-controls="basic-navbar-nav" type="button" aria-label="Toggle navigation" class="toggler navbar-toggler collapsed">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -64,7 +64,7 @@
                 <div class="col-lg-7">
                     <h2 class="display-4 mb-5 text-center">About Me</h2>
                     <p class="lead text-center">
-                        Abdul Rafeh has diverse hands-on experience in nickel/cobalt hydrometallurgy, iron ore pyrometallurgy, and oil refining, including one with a multinational mining company in Newfoundland and Labrador. He was integral in managing process safety dashboards
+                        Abdul Rafeh Rahat has diverse hands-on experience in nickel/cobalt hydrometallurgy, iron ore pyrometallurgy, and oil refining, including one with a multinational mining company in Newfoundland and Labrador. He was integral in managing process safety dashboards
                         and performing process engineering calculations relating to heat transfer, system hydraulics, mass and energy balance, and interpreting and redlining piping and instrumentation diagrams (P&IDs) and process flow diagrams (PFDs).
                         He thrives on tackling challenges within and beyond the engineering field and is driven to collaborate across diverse platforms to develop sustainable, lifelong, cost-effective, and successful projects.
                     </p>
