--- a/index.html
+++ b/index.html
@@ -83,11 +83,7 @@
                 <div class="col-md-6">
                     <h2 class="display-4 mb-5 text-center">Education</h2>
                     <p class="lead text-center">
-                        Software Engineering Diploma - BrainStation - August 2023 - August 2024
-                    </p>
-                    <hr>
-                    <p class="lead text-center">
-                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - September 2019 - March 2023 - St. John's, NL
+                        Bachelor of Engineering (Process) - Memorial University of Newfoundland (Co-op Program) - 2018 - 2024 - St. John's, NL
                     </p>
                     <hr>
                     <p class="lead text-center">
@@ -109,7 +105,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Technical Services Engineering Intern <br>Braya Renewable Fuels</h4>
-                            <span class="btn btn-outline-secondary mb-3">August 2023 - Present</span>
+                            <span class="btn btn-outline-secondary mb-3">Jan 2024 - May 2024</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/site_rep.jpg" alt="profilepicture">
@@ -121,7 +117,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Process Safety Engineering Intern <br>Vale Base Metals</h4>
-                            <span class="btn btn-outline-secondary mb-3">January 2023 - May 2023</span>
+                            <span class="btn btn-outline-secondary mb-3">January 2023 - Aug 2023</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img2.png" alt="profilepicture">
@@ -133,7 +129,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">Co-op Engineering Student <br>Hibernia Enhanced Oil Recovery Group</h4>
-                            <span class="btn btn-outline-secondary mb-3">Sept 2024 - Dec 2024</span>
+                            <span class="btn btn-outline-secondary mb-3">Sept 2022 - May 2022</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img3.png" alt="profilepicture">
@@ -145,7 +141,7 @@
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded">
                         <div class="card-body">
                             <h4 class="card-title py-3">IT Help Desk Consultant <br>Kansas State University</h4>
-                            <span class="btn btn-outline-secondary mb-3">January 2015 - May 2017</span>
+                            <span class="btn btn-outline-secondary mb-3">January 2016 - May 2018</span>
                             <hr>
                             <div class="pt-3">
                                 <img class="experience-img" src="images/experiences-img4.png" alt="profilepicture">
